--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+ul{
+  list-style-type: none;
+}
+
+.wrongAnswer{
+  background-color: firebrick;
+}
+.correctAnswer{
+  background-color: forestgreen;
+}
