Added: - REST services for QuestionsPage - UI tests - Transitions between pages - Functions to some of the pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+
 }
+
+/* CSS for fade-in/fade-out on page transition */
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
+/*---------------------------------------------*/
