--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,106 @@
 .App {
   text-align: center;
+  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-ul{
+ul {
+  
   list-style-type: none;
+  padding:0;
+  zoom:1;
+  *display: inline-block;
+ 
+
 }
+/* input types styling */
+
+/* -------------------------------------*/
+/* scoreboard player list and score styling */
+#playerNameAndScoreDiv{
+  margin: auto;
+  width:30%;
+  vertical-align: top;
+}
+
+
+#playerNameDiv.ul{
+  text-align: left;
+  vertical-align: left;
+  float: left;
+}
+li{
+  padding-left: 0%;
+}
+#playerScoreDiv.ul{
+  text-align: right;
+  
+}
+
+#playerNameDiv{
+ display: inline-block;
+ margin-left:0%;
+ text-align: left;
+}
+#playerScoreDiv{
+ justify-content: right;
+ align-content: right;
+ display: inline-block;
+ vertical-align: top;
+ padding-left: 15%;
+}
+
+/*------------------------------------------*/
+/* paragraphs styling */
+
+#questionTextParagraph{
+  font-size: 30px;
+}
+
+/*-----------------------*/
+
+/* all buttons configurations and styling down here */ 
+button {
+	background-color:#5BC0BE;
+	-moz-border-radius:30px;
+	-webkit-border-radius:30px;
+	border-radius:30px;
+	border:4px solid #4a5b96;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:'Trebuchet MS';
+	font-size:18px;
+	padding:16px 76px;
+	text-decoration:none;
+	text-shadow:0px 0px 15px #2f6627;
+}
+
+button:hover {
+  background-color: #6FFFE9;
+}
+
+button:active {
+	position:relative;
+	top:1px;
+}
+
+#answersButtonList{
+line-height: 75px;
+}
+
+#answersButtons:hover{
+  background-color: #566baf;
+}
+
+/*-------- right and wrong buttons after state change */
 
 .wrongAnswer{
   background-color: firebrick;
+  pointer-events: none;
 }
 .correctAnswer{
   background-color: forestgreen;
+  pointer-events: none;
 }
+
+/*--------------------------------------------------*/
