-Added gameroom page functions and validation -Create gameroom button now generates a random 5 digit code -Added Material UI select form that actually works

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,10 @@ ul {
 
 }
 /* input types styling */
-
+#alert-dialog-description{
+  font-size: 200%;
+  font-weight: bold;
+}
 /* -------------------------------------*/
 /* scoreboard player list and score styling */
 #playerNameAndScoreDiv{
