--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 .App {
-  text-align: center;
-  
+  text-align: center; 
 }
 
+div{
+  margin: auto;
+}
 ul {
-  
   list-style-type: none;
   padding:0;
   zoom:1;
   *display: inline-block;
- 
-
 }
 /* input types styling */
 #alert-dialog-description{
@@ -18,92 +17,55 @@ ul {
   font-weight: bold;
 }
 /* -------------------------------------*/
-/* scoreboard player list and score styling */
-#playerNameAndScoreDiv{
+#scoreboardTableContainer{
+  display: flex;
+  justify-content: center;
   margin: auto;
-  width:30%;
-  vertical-align: top;
-}
-
-
-#playerNameDiv.ul{
-  text-align: left;
-  vertical-align: left;
-  float: left;
-}
-li{
-  padding-left: 0%;
-}
-#playerScoreDiv.ul{
-  text-align: right;
+  width:24%;
   
 }
 
-#playerNameDiv{
- display: inline-block;
- margin-left:0%;
- text-align: left;
+#scoreboardButtonsContainer{
+  display: inline;
+  margin: auto;
+  justify-self: center;
+  align-self: auto;
+  align-content: center;
+  justify-content: center;
 }
-#playerScoreDiv{
- justify-content: right;
- align-content: right;
- display: inline-block;
- vertical-align: top;
- padding-left: 15%;
+#startPageButtonsContainer{
+  display: inline;
+  justify-self: center;
+  margin: auto;
+ 
 }
+
 
 /*------------------------------------------*/
 /* paragraphs styling */
 
 #questionTextParagraph{
-  font-size: 30px;
+  font-size: 25px;
 }
 
 /*-----------------------*/
 
 /* all buttons configurations and styling down here */ 
-button {
-	background-color:#5BC0BE;
-	-moz-border-radius:30px;
-	-webkit-border-radius:30px;
-	border-radius:30px;
-	border:4px solid #4a5b96;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:'Trebuchet MS';
-	font-size:18px;
-	padding:16px 76px;
-	text-decoration:none;
-	text-shadow:0px 0px 15px #2f6627;
-}
 
-button:hover {
-  background-color: #6FFFE9;
-}
 
-button:active {
-	position:relative;
-	top:1px;
-}
+
 
 #answersButtonList{
-line-height: 75px;
+line-height:3em;
 }
 
-#answersButtons:hover{
-  background-color: #566baf;
-}
 
 /*-------- right and wrong buttons after state change */
 
-.wrongAnswer{
-  background-color: firebrick;
+.disableAnswer{
   pointer-events: none;
 }
-.correctAnswer{
-  background-color: forestgreen;
-  pointer-events: none;
-}
+
+
 
 /*--------------------------------------------------*/
