--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ ul {
   *display: inline-block;
 }
 /* input types styling */
-#alert-dialog-description{
+#alert-dialog-description1{
   font-size: 200%;
   font-weight: bold;
 }
@@ -46,6 +46,11 @@ ul {
 
 #questionTextParagraph{
   font-size: 25px;
+}
+
+#playersInGameroomText{
+  font-size: 20px;
+  font-style: bold;
 }
 
 /*-----------------------*/
